# scaffold-ai

./: .gitignore  README.md  pyproject.toml
scaffold_ai/: README.md  cli.py  filesystem.py
scaffold_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/python-simple-app/: base_tree.txt
templates/web-spa-js/: base_tree.txt
