[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold_ai"
version = "0.0.1"
description = "AI-assisted project scaffolder"
authors = [{ name = "Wenes Limem" }]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "jinja2>=3.1.0",
]

[project.scripts]
scaffold-ai = "scaffold_ai.cli:app"

[tool.setuptools]
packages = ["scaffold_ai"]